Сделал класс для задания 4.1

--- a/netology_5.04.01/netology_5.04.01.vcxproj
+++ b/netology_5.04.01/netology_5.04.01.vcxproj
@@ -129,6 +129,9 @@
   <ItemGroup>
     <ClCompile Include="netology_5.04.01.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="in.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
