--- a/netology_5.06.01/netology_5.06.01.vcxproj
+++ b/netology_5.06.01/netology_5.06.01.vcxproj
@@ -127,7 +127,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="calc.cpp" />
     <ClCompile Include="netology_5.06.01.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="calc.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
