Добавил ррешение "Задача 3. Иерархия классов"

--- a/netology_5.06.03/netology_5.06.03.vcxproj
+++ b/netology_5.06.03/netology_5.06.03.vcxproj
@@ -127,7 +127,29 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="EquilateralTriangle.cpp" />
+    <ClCompile Include="Figure.cpp" />
     <ClCompile Include="netology_5.06.03.cpp" />
+    <ClCompile Include="Parallelogamm.cpp" />
+    <ClCompile Include="Quadrangle.cpp" />
+    <ClCompile Include="Rectangle.cpp" />
+    <ClCompile Include="RectangularTriangle.cpp" />
+    <ClCompile Include="Rumb.cpp" />
+    <ClCompile Include="Square.cpp" />
+    <ClCompile Include="Triangle.cpp" />
+    <ClCompile Include="UninhabitedTriangle.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="EquilateralTriangle.h" />
+    <ClInclude Include="Figure.h" />
+    <ClInclude Include="Parallelogamm.h" />
+    <ClInclude Include="Quadrangle.h" />
+    <ClInclude Include="Rectangle.h" />
+    <ClInclude Include="RectangularTriangle.h" />
+    <ClInclude Include="Rumb.h" />
+    <ClInclude Include="Square.h" />
+    <ClInclude Include="Triangle.h" />
+    <ClInclude Include="UninhabitedTriangle.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
