--- a/netology_5.08.02/netology_5.08.02.vcxproj.filters
+++ b/netology_5.08.02/netology_5.08.02.vcxproj.filters
@@ -18,66 +18,72 @@
     <ClCompile Include="netology_5.08.02.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="..\netology_5.06.03\EquilateralTriangle.cpp">
+    <ClCompile Include="FigureException.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="..\netology_5.06.03\Figure.cpp">
+    <ClCompile Include="EquilateralTriangle.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="..\netology_5.06.03\Parallelogamm.cpp">
+    <ClCompile Include="Figure.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="..\netology_5.06.03\Quadrangle.cpp">
+    <ClCompile Include="Parallelogamm.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="..\netology_5.06.03\Rectangle.cpp">
+    <ClCompile Include="Quadrangle.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="..\netology_5.06.03\RectangularTriangle.cpp">
+    <ClCompile Include="Rectangle.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="..\netology_5.06.03\Rumb.cpp">
+    <ClCompile Include="RectangularTriangle.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="..\netology_5.06.03\Square.cpp">
+    <ClCompile Include="Rumb.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="..\netology_5.06.03\Triangle.cpp">
+    <ClCompile Include="Square.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="..\netology_5.06.03\UninhabitedTriangle.cpp">
+    <ClCompile Include="Triangle.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="UninhabitedTriangle.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\netology_5.06.03\EquilateralTriangle.h">
+    <ClInclude Include="FigureException.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="..\netology_5.06.03\Figure.h">
+    <ClInclude Include="EquilateralTriangle.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="..\netology_5.06.03\Parallelogamm.h">
+    <ClInclude Include="Figure.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="..\netology_5.06.03\Quadrangle.h">
+    <ClInclude Include="Parallelogamm.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="..\netology_5.06.03\Rectangle.h">
+    <ClInclude Include="Quadrangle.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="..\netology_5.06.03\RectangularTriangle.h">
+    <ClInclude Include="Rectangle.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="..\netology_5.06.03\Rumb.h">
+    <ClInclude Include="RectangularTriangle.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="..\netology_5.06.03\Square.h">
+    <ClInclude Include="Rumb.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="..\netology_5.06.03\Triangle.h">
+    <ClInclude Include="Square.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="..\netology_5.06.03\UninhabitedTriangle.h">
+    <ClInclude Include="Triangle.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="UninhabitedTriangle.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
