Добавил заготовку для родительского класса транспорта

--- a/netology_5.racegame/netology_5.racegame.vcxproj.filters
+++ b/netology_5.racegame/netology_5.racegame.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="netology_5.racegame.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Transport.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Transport.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
