--- a/netology_5.racegame/netology_5.racegame.vcxproj.filters
+++ b/netology_5.racegame/netology_5.racegame.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="Transport.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Camel.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Transport.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Camel.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
