--- a/netology_5.racegame/netology_5.racegame.vcxproj
+++ b/netology_5.racegame/netology_5.racegame.vcxproj
@@ -128,11 +128,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Camel.cpp" />
+    <ClCompile Include="FastCamel.cpp" />
     <ClCompile Include="netology_5.racegame.cpp" />
     <ClCompile Include="Transport.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camel.h" />
+    <ClInclude Include="FastCamel.h" />
     <ClInclude Include="Transport.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
