--- a/netology_5.racegame/netology_5.racegame.vcxproj.filters
+++ b/netology_5.racegame/netology_5.racegame.vcxproj.filters
@@ -27,6 +27,12 @@
     <ClCompile Include="FastCamel.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Centaur.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="BootsAT.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Transport.h">
@@ -36,6 +42,12 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="FastCamel.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Centaur.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="BootsAT.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
