Добавил класс Eagle

--- a/netology_5.racegame/netology_5.racegame.vcxproj
+++ b/netology_5.racegame/netology_5.racegame.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="BootsAT.cpp" />
     <ClCompile Include="Camel.cpp" />
     <ClCompile Include="Centaur.cpp" />
+    <ClCompile Include="Eagle.cpp" />
     <ClCompile Include="FastCamel.cpp" />
     <ClCompile Include="MagicCarpet.cpp" />
     <ClCompile Include="netology_5.racegame.cpp" />
@@ -139,6 +140,7 @@
     <ClInclude Include="BootsAT.h" />
     <ClInclude Include="Camel.h" />
     <ClInclude Include="Centaur.h" />
+    <ClInclude Include="Eagle.h" />
     <ClInclude Include="FastCamel.h" />
     <ClInclude Include="MagicCarpet.h" />
     <ClInclude Include="Transport.h" />
