--- a/netology_5.racegame/netology_5.racegame.vcxproj.filters
+++ b/netology_5.racegame/netology_5.racegame.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="MagicCarpet.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Eagle.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Transport.h">
@@ -54,6 +57,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="MagicCarpet.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Eagle.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
